--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 cloudinarycloudname=dqrckk5su
 cloudinaryapi=943665289844672
 cloudinarysecret=fyFlkZ21GhAfVtnVS-Xj_AQM7bg
+GEOCODER_API_KEY = AIzaSyAMgPb1ljtTOxNK2dJ8ymiBKBMkBMf8zas
