--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "navigator": "^1.0.1",
